<resources>
    <string name="app_name">E-Learning</string>
    <string name="copyright">SMAMDA © 2016</string>

    <string name="pengumuman_fragment_title">Announcement</string>
    <string name="artikel_fragment_title">Article</string>
    <string name="berita_fragment_title">News</string>
    <string name="daftar_pelajaran_fragment_title">Lessons</string>
    <string name="profil_fragment_title">Profile</string>
    <string name="pengaturan_fragment_title">Settings</string>

    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>

    <string name="title_input_hint">Title</string>
    <string name="content_input_hint">Content</string>

    <string name="dialog_title">Add item</string>

    <string name="dummy_string">
Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text .\n\n

Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text .
    </string>

    <!-- View Pager Title -->
    <string name="fragment_smamda">SMAMDA</string>
    <string name="fragment_ekskul">EKSKUL</string>
    <string name="fragment_nasional">NATIONAL</string>
    <string name="fragment_internasional">INTERNATIONAL</string>
    <string name="fragment_guru">TEACHER</string>
    <string name="fragment_siswa">STUDENT</string>

    <!-- Login Activity -->
    <string name="login_switcher">Login as</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_button">Login</string>
    <string name="loign_guide">How to Login ?</string>

    <!-- Guide Activity -->
    <string name="guru_judul">● Teacher</string>
    <string name="siswa_judul">● Student</string>
    <string name="tamu_judul">● Guest</string>
    <string name="guru">
    To login as a teacher, the username is the teacher email.\nExample :\n

         •username  :   administrator@gmail.com\n
    </string>
    <string name="siswa">
    To login as a student, the username is the student number.\nExample :\n

         •username  :   090005\n
    </string>
    <string name="tamu">
    To login as guest, press the login button.\n
    </string>

    <string name="edittext_error">Can\'t be empty</string>
    <string name="titletext_error">Title can\'t be empty</string>
    <string name="contenttext_error">Content can\'t be empty</string>
    <string name="title_content_error">Title &#038; Content can\'t be empty</string>
    <string name="text_success">Item added</string>
    <string name="text_undo">UNDO</string>

    <string name="text_about">This is a sample app of SMAMDA E-learning.
    \nSMAMDA e-learning : http://e-learning.smamda.sch.id
    \nSMAMDA : http://smamda.sch.id</string>

    <string name="google_license">

       Copyright (C) 2016 The Android Open Source Project\n\nLicensed under the Apache License,
        Version 2.0 (the "License");\nyou may not use this file except in compliance with the License.
        \nYou may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless
        required by applicable law or agreed to in writing, software distributed under the
        License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND,
        either express or implied. See the License for the specific language governing permissions
        and limitations under the License.

    </string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
