<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.SettingsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/guide_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primary"
        android:elevation="@dimen/toolbar_elevation"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/about_card_margin"
            android:layout_marginRight="@dimen/about_card_margin"
            android:layout_marginTop="@dimen/about_card_margin_top_bottom"
            app:cardBackgroundColor="@color/card_background"
            card_view:cardElevation="@dimen/card_elevation"
            card_view:cardUseCompatPadding="true"
            card_view:cardCornerRadius="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16dp"
                        android:text="@string/guru_judul"
                        android:textStyle="bold"
                        android:textColor="@color/primary_dark"
                        android:padding="16dp"/>
                </FrameLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/accent"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/guru"
                    android:textSize="14dp"
                    android:layout_gravity="left"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/about_card_margin"
            android:layout_marginRight="@dimen/about_card_margin"
            android:layout_marginTop="@dimen/about_card_margin_top_bottom"
            app:cardBackgroundColor="@color/card_background"
            card_view:cardElevation="@dimen/card_elevation"
            card_view:cardUseCompatPadding="true"
            card_view:cardCornerRadius="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16dp"
                        android:text="@string/siswa_judul"
                        android:textStyle="bold"
                        android:textColor="@color/primary_dark"
                        android:padding="16dp"/>
                </FrameLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/accent"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/siswa"
                    android:textSize="14dp"
                    android:layout_gravity="left"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/about_card_margin"
            android:layout_marginRight="@dimen/about_card_margin"
            android:layout_marginTop="@dimen/about_card_margin_top_bottom"
            app:cardBackgroundColor="@color/card_background"
            card_view:cardElevation="@dimen/card_elevation"
            card_view:cardUseCompatPadding="true"
            card_view:cardCornerRadius="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16dp"
                        android:text="@string/tamu_judul"
                        android:textStyle="bold"
                        android:textColor="@color/primary_dark"
                        android:padding="16dp"/>
                </FrameLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/accent"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/tamu"
                    android:textSize="14dp"
                    android:layout_gravity="left"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

</LinearLayout>
